<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacingMedium">

    <TextView
        android:id="@+id/text_view_list_song"
        style="@style/ListTextViewSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        tools:text="@string/text_view_placeholder_song" />

    <TextView
        android:id="@+id/text_view_list_artist"
        style="@style/ListTextViewArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_list_song"
        tools:text="@string/text_view_placeholder_artist" />

    <TextView
        android:id="@+id/text_view_list_song_length"
        style="@style/ListTextViewSongLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text_view_list_song"
        android:layout_toLeftOf="@+id/text_view_list_artist"
        tools:text="@string/text_view_placeholder_length" />
</RelativeLayout>